<resources>
    <string name="app_name">Pick-a-Pet</string>
    <string name="action_edit_deatils">ערוך פרטי משתמש</string>
    <string name="action_add_pet">הוסף חיה חדשה</string>
    <string name="action_remove_pet">הסר את החיות שלי</string>
    <string name="action_refresh">רענן</string>
    <string name="element_text">Element</string>
    <string name="title_activity_login">כניסה למערכת</string>

    <!-- Strings related to login -->
    <string name="prompt_email">דוא&quot;ל</string>
    <string name="prompt_password">סיסמא</string>
    <string name="prompt_invalid_data">אחד מהנתונים שהכנסת שגוי</string>
    <string name="action_sign_in">התחבר</string>
    <string name="action_register">הרשמה</string>
    <string name="action_sign_in_short">הירשם</string>
    <string name="action_sign_out_short">התנתק</string>
    <string name="action_sign_out_key">Sing Out</string>
    <string name="action_sign_out_dialog">האם אתה בטוח שברצונך להתנתק?</string>
    <string name="action_sign_out_user_name"></string>


    <!-- Strings related to Add Animal -->
    <string name="add_animal_title">הוספת חיה חדשה</string>
    <string name="add_animal_name">שם החיה</string>
    <string name="add_animal_data">נתוני החיה</string>
    <string name="add_animal_type">גזע החיה:</string>
    <string name="add_animal_kind">סוג החיה:</string>
    <string name="add_animal_must_image">*חובה תמונה</string>
    <string name="add_animal_gender">מין החיה:</string>
    <string name="add_animal_image">הוסף תמונה</string>
    <string name="add_animal_birth_date_text">תאריך לידה</string>
    <string name="add_animal_description"> תיאור החיה (עד 70 תווים)</string>
    <string name="add_animal_birth_date">הכנס תאריך</string>
    <string name="add_animal_birth_date_day">יום</string>
    <string name="add_animal_birth_date_month">חודש</string>
    <string name="add_animal_birth_date_year">שנה</string>

    <string name="add_animal_all">הוסף חיה</string>
    <string name="add_hint_name">שם</string>
    <string name="add_hint_description">תיאור החיה בקצרה</string>
    <string name="add_hint_bdate">01/01/1990</string>

    <string name="error_invalid_name">השם אינו תקין</string>
    <string name="error_invalid_description1">התיאור אינו תקין</string>
    <string name="error_invalid_description2">התיאור ארוך מידי</string>
    <string name="error_invalid_birth_date">תאריך הלידה שהוכנס בעתיד</string>


    <!-- Strings related to Animal Image Details -->
    <string name="animal_details_title">פרטי החיה</string>
    <string name="animal_details_name">שלום, קוראים לי </string>
    <string name="animal_start_date">זמן במערכת: </string>
    <string name="animal_details_birth_date">הגיל שלי הוא </string>
    <string name="animal_details_type"> הגזע שלי הוא </string>
    <string name="animal_details_kind"> מסוג </string>
    <string name="animal_details_gender">מין </string>
    <string name="animal_details_description">קצת עלי </string>
    <string name="animal_details_owner_details">פרטי היקשרות </string>
    <string name="animal_details_owner_name">שם בעלים: </string>
    <string name="animal_details_owner_address">כתובת: </string>
    <string name="animal_details_owner_phone">טלפון לפרטים: </string>


    <!-- Strings related to Add User -->
    <string name="add_user_title">פרטים אישיים</string>
    <string name="add_user_fname">שם פרטי:</string>
    <string name="add_user_lname">שם משפחה:</string>
    <string name="add_user_id">תעודת זהות:</string>
    <string name="add_user_login_data">פרטי כניסה למערכת</string>
    <string name="add_user_email">:Email</string>
    <string name="add_user_phone">מס טלפון:</string>
    <string name="add_user_pass">סיסמא:</string>
    <string name="add_user_pass_confirm">וודא סיסמא:</string>
    <string name="add_user_address">כתובת:</string>
    <string name="add_user_city">עיר מגורים:</string>
    <string name="add_user_all">הוסף משתמש חדש</string>
    <string name="add_user_hint_id">מס בן 9 ספרות</string>
    <string name="add_user_hint_fname">ישראל</string>
    <string name="add_user_hint_lname">ישראלי</string>
    <string name="add_user_hint_email">Israel@gmail.com</string>
    <string name="add_user_hint_city">תל אביב</string>
    <string name="add_user_hint_address">עזרא 45</string>


    <string name="error_invalid_email">כתובת האימייל אינה תקינה</string>
    <string name="error_invalid_password">סיסמא זו קצרה מידי</string>
    <string name="error_incorrect_password">סיסמא זו אינה תקינה</string>
    <string name="error_field_required">שדה זה הינו שדה חובה</string>
    <string name="error_invalid_id">תעודת הזהות אינה תקינה</string>
    <string name="error_invalid_phone">מס הטלפון אינו תקין</string>
    <string name="error_incorrect_password_match">אין התאמה בין הסיסמאות</string>
    <string name="error_put_data">כנראה קרתה טעות, נסה שוב בבקשה</string>
    <string name="success_update_data">הנתונים עודכנו בהצלחה</string>


    <!-- Strings related to Update User -->
    <string name="update_user_title">עדכון פרטי משתמש</string>
    <string name="update_user_all">עדכן פרטים</string>


    <!-- Strings related to Dialogs -->
    <string name="dialog_remove_animals_message_text">בחר את החיה אשר ברצונך למחוק</string>
    <string name="dialog_remove_animals_title_text">בחר את החיה אשר ברצונך למחוק</string>
    <string name="dialog_remove_animals_success_text2">שיהיה בהצלחה בביתך החדש</string>
    <string name="dialog_remove_animals_success_text1">להתראות</string>
    <string name="dialog_error_text">קרתה טעות בתהליך, ניתן לנסות שוב</string>
    <string name="dialog_filter_animals_title_text">בצע סינון לחיות לפי:</string>
    <string name="dialog_filter_animals_gender_text">לפי מין: </string>
    <string name="dialog_filter_animals_ok_button">סנן</string>
    <string name="dialog_filter_animals_cancel_button">ביטול</string>
    <string name="dialog_filter_animals_kind_text">לפי סוג: </string>
    <string name="dialog_filter_animals_type_text">לפי גזע: </string>
    <string name="dialog_filter_all_option">הכל</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_storege">"Storege permissions are needed to gett images from device."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_about">About</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_about_display_txt">Pick A Pet has been developed by Sagi Mizrahi</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Connections URL-->
    <string name="base_url">http://10.0.0.17:3000</string>
    <string name="animals_request">animals</string>
    <string name="animals_pic_request">animalpic</string>
    <string name="animals_owner_request_id">animalownerid</string>
    <string name="animals_image_all_data_request">animal_image_all_details</string>
    <string name="animals_owner_active_request">animalowner_active</string>
    <string name="animals_pic_filter_all_request">pics_filter_all_animals</string>
    <string name="animals_owner_all_active_animals_request">user_all_animals</string>
    <string name="animals_owner_deactivate_animals_request">user_deactivate_animal</string>
    <string name="animals_owner_request_aid">animalowneraid</string>
    <string name="user_request">user</string>
    <string name="user_request_id">userid</string>
    <string name="user_request_update">userupdate</string>
    <string name="user_request_login">userlogin</string>
    <string name="animal_type_request">animaltype</string>
    <string name="animal_kind_request">animalkind</string>

    <!-- Put/Get extra values strings-->
    <string name="current_user_details_json">current_user_details</string>
    <string name="current_user_details_result_json">current_user_result_details</string>
    <string name="animal_image_json">animal_data</string>
    <string name="current_user_active_animals_json">current_user_details</string>
    <string name="current_user_login_json">current_user_login</string>
    <string name="all_type_json">all_animals_type</string>
    <string name="all_kind_json">all_animals_kind</string>
    <string name="all_active_animal_pic_json">animal_pic_json</string>
    <string name="animals_image_all_data_json">image_details_json</string>
    <string name="filter_kind_id">filter_kind_id</string>
    <string name="filter_type_id">filter_type_id</string>
    <string name="filter_gender_id">filter_gender_id</string>


    <string name="title_activity_animal_details">AnimalDetailsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Details Activity strings-->
    <string name="call_button_text">התקשר</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_pet">Pick-a-Pet</string>
    <string name="title_activity_add_new_user">הוספת משתמש חדש</string>


</resources>
