<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pet.att.pickapet.AppActivities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_pet"
        android:orderInCategory="100"
        android:title="@string/action_add_pet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_pet"
        android:orderInCategory="100"
        android:title="@string/action_remove_pet"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
</menu>
