<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.pet.att.pickapet.AppActivities.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about" />

    <header
        android:fragment="com.pet.att.pickapet.AppActivities.SettingsActivity$SignOutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/action_sign_out_short" />

    <header
        android:fragment="com.pet.att.pickapet.AppActivities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <!--<header-->
        <!--android:fragmecom.pet.att.pickapet.AppActivities.SettingsActivityvity$NotificationPreferenceFragment"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/pref_header_notifications" />-->

    <!--<header-->
        <!--android:fragmecom.pet.att.pickapet.AppActivities.SettingsActivityvity$DataSyncPreferenceFragment"-->
        <!--android:icon="@drawable/ic_sync_black_24dp"-->
        <!--android:title="@string/pref_header_data_sync" />-->


</preference-headers>
