<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pet.att.pickapet.AppActivities.AddNewUserActivity"
    tools:showIn="@layout/activity_add_new_user">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/details_user_margins"
        android:layout_marginRight="@dimen/details_user_margins"
        android:layout_marginBottom="@dimen/details_user_margins"
        android:layout_marginLeft="@dimen/details_user_margins"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:text="@string/add_user_title"
            android:textAlignment="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_text_id"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_id" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_text_fname"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_fname" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_fname" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_text_lname"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_lname" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_lname" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/user_text_email"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_email" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_text_phone"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textDirection="anyRtl"
                android:gravity="right" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_phone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_text_address"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_address"
                />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_add_city"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textDirection="anyRtl"
                android:gravity="right"
                android:hint="@string/add_user_hint_city" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_city" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_add_password"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textDirection="anyRtl"
                android:gravity="right" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_pass" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_user_layout_horizontal"
            android:layout_marginTop="@dimen/details_user_margins"
            android:layout_marginRight="@dimen/details_user_margins"
            android:layout_marginBottom="@dimen/details_user_margins"
            android:layout_marginLeft="@dimen/details_user_margins"
            tools:layout_editor_absoluteX="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_add_password_confim"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textDirection="anyRtl"
                android:gravity="right" />

            <TextView
                android:layout_width="@dimen/details_user_textview_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/details_user_margins"
                android:layout_marginRight="@dimen/details_user_margins"
                android:layout_marginBottom="@dimen/details_user_margins"
                android:layout_marginLeft="@dimen/details_user_margins"
                tools:layout_editor_absoluteX="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/add_user_pass_confirm" />
        </LinearLayout>

        <Button
            android:id="@+id/user_add_all_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user_all"/>

    </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>
